--- a/textureimporter/ui/importer_dialog.ui
+++ b/textureimporter/ui/importer_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>773</width>
-    <height>643</height>
+    <height>608</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -86,38 +86,10 @@
         <x>0</x>
         <y>0</y>
         <width>753</width>
-        <height>509</height>
+        <height>474</height>
        </rect>
       </property>
-      <layout class="QVBoxLayout" name="config_lay">
-       <item>
-        <layout class="QHBoxLayout" name="renderer_lay" stretch="0,1">
-         <item>
-          <widget class="QLabel" name="renderer_lbl">
-           <property name="text">
-            <string>Renderer</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="renderer_cmb"/>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
+      <layout class="QVBoxLayout" name="config_lay"/>
      </widget>
     </widget>
    </item>
@@ -129,7 +101,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="footer_lay" stretch="1,0">
+    <layout class="QHBoxLayout" name="footer_lay" stretch="1,0,0">
      <item>
       <widget class="QProgressBar" name="main_prgbar">
        <property name="value">
@@ -141,9 +113,16 @@
       </widget>
      </item>
      <item>
-      <widget class="QDialogButtonBox" name="main_btnbox">
-       <property name="standardButtons">
-        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <widget class="QPushButton" name="search_btn">
+       <property name="text">
+        <string>Search...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cancel_btn">
+       <property name="text">
+        <string>Cancel</string>
        </property>
       </widget>
      </item>
