--- a/textureimporter/ui/networks_widget.ui
+++ b/textureimporter/ui/networks_widget.ui
@@ -23,7 +23,7 @@
       </size>
      </property>
      <property name="text">
-      <string>Search</string>
+      <string>Search Path</string>
      </property>
     </widget>
    </item>
@@ -56,7 +56,7 @@
     <widget class="QWidget" name="networks_tree" native="true"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="conflict_lay" stretch="0,1">
+    <layout class="QHBoxLayout" name="conflict_lay">
      <item>
       <widget class="QLabel" name="conflict_lbl">
        <property name="text">
@@ -66,6 +66,13 @@
      </item>
      <item>
       <widget class="QComboBox" name="conflict_cmb"/>
+     </item>
+     <item>
+      <spacer name="spacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
